Closed Bug 1590528 Opened 5 years ago Closed 5 years ago

The DNS suffix is not always computed when Firefox starts up

Categories

(Core :: Networking, defect, P2)

Unspecified
Windows
defect

Tracking

()

VERIFIED FIXED
mozilla73
Tracking Status
firefox72 --- verified
firefox73 --- verified

People

(Reporter: valentin, Assigned: valentin)

References

Details

(Whiteboard: [necko-triaged][trr])

Attachments

(1 file)

It seems CheckAdaptersAddresses isn't always called when Firefox starts up - this means that sometimes we don't have a DNS suffix list, even though we should.

The problem is that the suffix is not always computed when Firefox starts up.
This patch adds a pref network.notify.initial_call that controls whether
CheckAdaptersAddresses gets called imediately after.
This call is necessary in order to compute the suffix list, VPN status, etc.

This patch also ensures that OnDnsSuffixListUpdated gets called by
NetlinkService::ComputeDNSSuffixList on Android. This notification is
necessary for the TRRService to pick up the suffix list.

Pushed by valentin.gosu@gmail.com:
https://hg.mozilla.org/integration/autoland/rev/91c517133cc3
Call CheckAdaptersAddresses at startup r=kershaw
Blocks: 1600616
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla73

Did you want to uplift this?

Flags: needinfo?(valentin.gosu)

Comment on attachment 9112588 [details]
Bug 1590528 - Call CheckAdaptersAddresses at startup r=kershaw

Beta/Release Uplift Approval Request

  • User impact if declined: Users with TRR enabled will have an unpredictable behaviour when resolving hostnames that are part of the DNS suffix list (or VPN/proxy detection)
    Without this patch the DNS suffix isn't computed when Firefox is first run, so until the first network change event it would use TRR to resolve domains that are part of the local DNS suffix, after that it won't.
  • Is this code covered by automated tests?: Unknown
  • Has the fix been verified in Nightly?: Yes
  • Needs manual test from QE?: Yes
  • If yes, steps to reproduce: Similar to the test plans for bug 1595025 (and dependencies) - be on a network with a DNS suffix, run Firefox, attempt to load a subdomain of that suffix, make sure it doesn't get sent to the TRR server.
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): These changes mostly affect windows - it makes sure that CheckAdaptersAddresses also gets called immediately after startup (off main thread) in order to compute the suffix list, VPN/proxy detection, etc.
    The code is controlled by a pref.

The Linux bits of the patch just make sure we call OnDnsSuffixListUpdated after every ComputeDNSSuffixList call (no pref for this bit)

  • String changes made/needed:
Flags: needinfo?(valentin.gosu)
Attachment #9112588 - Flags: approval-mozilla-beta?
Flags: qe-verify+
QA Whiteboard: [qa-triaged]

This issue is verified fixed using Firefox 73.0a1 (BuildId:20191212095326) on Windows 10 64bit, macOS 10.14 and Ubuntu 18.04 64bit. Thanks for fixing this !

Pending a beta uplift.

Flags: needinfo?(emil.ghitta)

Comment on attachment 9112588 [details]
Bug 1590528 - Call CheckAdaptersAddresses at startup r=kershaw

ok let's get this in 72.0b6

Attachment #9112588 - Flags: approval-mozilla-beta? → approval-mozilla-beta+

This issue is verified fixed using Firefox 72.0b7 on Windows 10 64bit.

Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: